# make-pdf-accessible

./: .checkov.yaml  .editorconfig  .eslintrc.js  .gitignore  .pre-commit-config.yaml  .prettierignore  .tflint.hcl  CLAUDE.md  DEVELOPMENT.md  DOCUMENTDB_SETUP.md  Makefile  PDF_PROCESSING_PIPELINE.md  README.md  STATUS.md  UPLOAD_IMPLEMENTATION.md  cookies.txt  create-proper-admin.js  dangerfile.ts  docker-compose.test.yml  docker-compose.yml  init-auth-db.js  openapi.yaml  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  pytest.ini  repo-structure.txt  requirements-dev.txt  requirements.txt  test_mongodb_integration.py  test_pdf_extraction.py  tsconfig.json  vitest.workspace.ts
.claude/: plan.md  settings.local.json  terraform-tags.md  terraform.plan
.github/: REQUIRED_CHECKS_SETUP.md
.github/actions/: README.md
.github/environments/: dev.yml  prod.yml  staging.yml
.github/scripts/: setup-branch-protection.sh
.github/workflow-templates/: comprehensive-ci-cd.yml  service-deployment.yml
.github/workflows/: ENVIRONMENT_DEPLOYMENT_GUIDE.md  ENVIRONMENT_STRATEGIES_README.md  IAM_SETUP.md  NOTIFICATIONS.md  README.md  ROLLBACK_GUIDE.md  SECRETS.md  SECURITY_BEST_PRACTICES.md  TESTING.md  TROUBLESHOOTING.md  api-ci.yml  build-and-deploy-lambda.yml  ci.yml  compliance-check.yml  danger.yml  dashboard-ci.yml  dependency-update.yml  ecr-security-scan.yml.disabled  infra-ci.yml  notification-config.example.yml  release.yml  required-checks.yml  rollback.yml  security-scan.yml  setup-oidc.sh  test-environment-config.yml  test-rollback.yml  web-ci.yml
.husky/: commit-msg  pre-commit  pre-push
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.playwright-mcp/: download.html  html-1295c38f.html
dashboard/: .dockerignore  .env.example  .eslintrc.json  .prettierignore  Dockerfile  README.md  SOCIAL_AUTH_SETUP.md  auth.ts  better-auth.config.ts  jest.config.js  next.config.js  package.json  playwright.config.ts  seed-admin.js  seed-env-admin.js  tsconfig.json  tsconfig.typecheck.json
docs/: LLM_INTEGRATION.md  gap-report.json  gap-report.md  implementation-plan.md
docs/costs/: RUNBOOK.md  (+1 more)
scripts/: seed-dev-data.py  simple-seed.py
services/worker/: Dockerfile  README.md  WORKER_PACKAGE_SUMMARY.md  celeryconfig.py  mypy.ini  pyproject.toml  requirements.txt  test_pdf_extraction.py  worker.py
services/worker/auth/: __init__.py  better_auth.py  jwt_auth.py
services/worker/src/: accessible_text_exporter.py  chunking_service.py  embeddings_service.py  review_service.py  semantic_html_builder.py
services/worker/src/pdf_worker/: __init__.py
services/worker/src/pdf_worker/aws/: bedrock.py  dynamodb.py  s3.py  sqs.py  textract.py
services/worker/src/pdf_worker/core/: config.py  exceptions.py
services/worker/src/pdf_worker/decorators/: idempotency.py
services/worker/src/pdf_worker/models/: document.py
services/worker/src/pdf_worker/quota/: __init__.py  quota_manager.py
services/worker/src/pdf_worker/schemas/: document_schema.py
services/worker/src/pdf_worker/templates/: accessible_html.py
services/worker/src/pdf_worker/timeout/: __init__.py  timeout_integration.py
services/worker/src/pdf_worker/utils/: pdf.py
services/worker/tests/: conftest.py  test_document_models.py  test_main.py  test_s3_client.py
tests/: test_pipeline_integration.py
web/: .env.example  .eslintrc.js  Dockerfile  jest.config.js  jest.setup.js  next.config.js  package.json  tailwind.config.js  tsconfig.json
(+345 files in other folders)
